update javamvp aeron version separately